--- a/404.html
+++ b/404.html
@@ -1,1 +1,17 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Error 404 | Hedonia Events</title>
+  <meta name="description" content="Hedonia Events">
+  
+ 
+
+</head>
+<h1> ERROR 404 : Page not found. <br> Go to  <a href="www.hedoniaevents.com">Home </a> page.</h1>
+<body>
+  
+</body>
+</html>
