--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
  
 
 </head>
-<h1> ERROR 404 : Page not found. <br> Go to  <a href="www.hedoniaevents.com">Home </a> page.</h1>
+<h1> ERROR 404 : Page not found. <br> Go to  <a href="http://www.hedoniaevents.com">Home </a> page.</h1>
 <body>
   
 </body>
