--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Hedonia Events | India</title>
-  <meta name="description" content="Hedonia Events">
+  <meta name="description" content="Hedonia Events is a gurugram based event management company.">
   
  
 
