--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 
 </head>
-<h1>  <a href="/www.hedoniaevents.com">Hedonia Events </a></h1>
+<h1>  <a href="http://www.hedoniaevents.com">Hedonia Events </a></h1>
 <body>
   
 </body>
