--- a/about us.html
+++ b/about us.html
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="About Us.html">About Us</a></li>
+											<li><a href="about Us.html">about Us</a></li>
 											<li><a href="FAQ.html">FAQ</a></li>
 											
 										</ul>
