--- a/FAQ.html
+++ b/FAQ.html
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="About Us.html">About Us</a></li>
+											<li><a href="about us.html">about us</a></li>
 											<li><a href="FAQ.html">FAQ</a></li>
 											
 										</ul>
